콘솔내용 추가

--- a/01자바스크립트시작.html
+++ b/01자바스크립트시작.html
@@ -17,6 +17,8 @@
         else
             console.log('올바른 점수입니다.')
 
+        console.log('hello')
+
     </script>
     
     <link rel="stylesheet" href="test.css">
